<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TraVo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">设置</string>
    <string name="back">返回</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="nickname">昵称</string>
    <string name="signature">个性签名</string>
    <string name="change_avatar">更换头像</string>
    <string name="select_picture">选择图片</string>
    <string name="take_picture">立即拍照</string>
    <string name="change_info">修改个人信息</string>
    <string name="edit_email">修改邮箱</string>
    <string name="edit_password">修改密码</string>
    <string name="save_info">保存</string>
    <string name="logout">退出</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="user_signature">个性签名</string>
    <string name="back_for_guest">我是游客，随便逛一逛</string>
    <string name="welcome">Welcome</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="option_new">添加</string>
    <string name="your_position">您的位置:</string>
    <string name="locating">定位中&#8230;</string>
    <string name="click_to_locate">点击开始定位</string>
    <string name="about">关于</string>
    <string name="theme">主题</string>
    <string name="push">通知推送</string>
    <string name="shadowDx_filter">0.0</string>
    <string name="shadowDy_filter">0.5</string>
    <string name="shadowRadius_filter">2.0</string>
    <string name="travel_title">旅行标题</string>
    <string name="action_settings">设置</string>
    <string name="action_add_note">添加游记</string>
    <string name="add_time">添加时间</string>
    <string name="add_date">添加日期</string>
    <string name="action_new">添加</string>
    <string name="action_save">保存</string>
    <string name="action_delete">删除</string>
    <string name="action_refresh">刷新</string>
    <string name="action_edit">编辑</string>
    <string name="action_finish">结束游记</string>
    <string name="action_comment">评论</string>
    <string name="action_vote">点赞</string>
    <string name="action_favorite">收藏</string>
    <string name="picture_description">写下你的游记或者图片描述</string>
    <string name="action_formroute">路线图</string>

    <string-array name="actionbar_spinner_sort">
        <item>按人气</item>
        <item>按距离</item>
    </string-array>
    <string-array name="drawermenu">
        <item>首   页</item>
        <item>热门攻略</item>
        <item>搜   索</item>
        <item>个人主页</item>
        <item>设   置</item>
    </string-array>
    <string-array name="travel_type">
        <item>热门游记</item>
        <item>朋友圈</item>
        <item>我的附近</item>
    </string-array>
    <string-array name="theme_list">
        <item>默认</item>
        <item>魅族蓝</item>
        <item>魔力红</item>
        <item>清新绿</item>
    </string-array>
    <string-array name="theme_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="use_sina">新浪微博账号登陆</string>
    <string name="use_qq">QQ账号登陆</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_guest">GuestActivity</string>
    <string name="image_not_downloaded">Image not downloaded</string>
    <string name="the_end">The End</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="refresh_list_failed">Failed to refresh list.</string>
    <string name="donate_url">https://m.alipay.com/personal/payment.htm?reason=给我买个键盘T_T&amp;amount=3&amp;account=issac@imid.me</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_change_user_info">ChangeUserInfoActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_activity_travel">TravelActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_add_note">AddNoteActivity</string>
    <string name="title_activity_add_travel">AddTravelActivity</string>
    <string name="action_ok">确认</string>
    <string name="title_activity_my_travel_detail">MyTravelDetailActivity</string>
    <string name="title_activity_personal_notes">PersonalNotesActivity</string>
    <string name="title_activity_note_detail">NoteDetailActivity</string>
    <string name="title_activity_edit_nickname">EditNicknameActivity</string>
    <string name="title_activity_edit_gender">EditGenderActivity</string>
    <string name="title_activity_route">RouteActivity</string>
    <string name="title_activity_edit_email">EditEmailActivity</string>
    <string name="title_activity_travel_detail">TravelDetailActivity</string>
    <string name="title_activity_other_user_info">OtherUserInfoActivity</string>
    <string name="title_activity_edit_avatar">EditAvatarActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_followers">FollowersActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_edit_signature">EditSignatureActivity</string>
    <string name="title_activity_personal_travel_comment">PersonalTravelCommentActivity</string>
    <string name="title_activity_my_favorite_travel">MyFavoriteTravelActivity</string>
    <string name="title_activity_others_notes_detail">OthersNotesDetailActivity</string>
    <string name="title_activity_country_detail">CountryDetailActivity</string>
    <string name="title_activity_province_detail">ProvinceDetailActivity</string>
    <string name="title_activity_city_detail">CityDetailActivity</string>
    <string name="title_activity_spot_detail">SpotDetailActivity</string>

</resources>
