<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_add_note" android:icon="@drawable/action_add"/>
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/action_edit" android:icon="@drawable/action_edit"/>
    <item
        android:id="@+id/action_finish"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_finish" />
    <item 
        android:id="@+id/action_route"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_formroute"/>

</menu>
