<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/travo_logo" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_logo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:text="rew@qq.com"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_email"
        android:layout_below="@+id/login_email"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="rew"
        android:hint="@string/password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/login_logo"
        android:layout_marginRight="20dp"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/login_by_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_logo"
        android:layout_below="@+id/login_password"
        android:layout_marginRight="18dp"
        android:layout_marginTop="71dp"
        android:text="使用qq登录" />

    <Button
        android:id="@+id/login_by_sina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_logo"
        android:layout_below="@+id/login_by_qq"
        android:layout_marginTop="14dp"
        android:text="使用sina微博登录" />

</RelativeLayout>
